k8s/frontend-blue-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-blue
  labels:
    app: frontend
    color: blue
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
      color: blue
  template:
    metadata:
      labels:
        app: frontend
        color: blue
    spec:
      containers:
        - name: frontend
          image: lokesh86186/blue-green-blue:v1
          ports:
            - containerPort: 80
